@@ -970,7 +970,8 @@
 #
 ## Supermicro CPU Temperature Overheat
 ## X7DBR-3/X7DB8/X8DTN/X7SBI-LN4/X8DTH/X8DTG/X8DTU/X8DT3-LN4F/X8DTU-6+/X8DTL/X8DTL-3F
-##  X8SIL-F/X9SCL/X9SCM/X8DTN+-F/X8SIE/X9SCA-F-O/H8DGU-F/X9DRi-F/X9DRI-LN4F+/X9SPU-F-O  
+##  X8SIL-F/X9SCL/X9SCM/X8DTN+-F/X8SIE/X9SCA-F-O/H8DGU-F/X9DRi-F/X9DRI-LN4F+/X9SPU-F-O
+##  X9SCM-iiF  
 ##
 ## Manufacturer ID = 10876 (Supermicro), 10437 (Peppercon, IPMI card manufacturer),
 ##                   47488 (Supermicro, not IANA number, special case),
@@ -978,11 +979,12 @@
 ## Product ID = 4 (X7DBR-3, X7DB8, X8DTN, X7SBI-LN4), 43707 (X8DTH, X8DTG, X8DTU, X8DT3-LN4F), 1549 (X8DTU-6+),
 ##              6 (X8DTL, X8DTL-3F), 1541 (X8SIL-F), 1572 (X9SCL, X9SCM), 1551 (X8DTN+-F), 1037 (X8SIE)
 ##              1585 (X9SCA-F-O), 43025 (H8DGU-F), 1576 (X9DRi-F), 1574 (X9DRI-LN4F+), 1603 (X9SPU-F-O)
+##              1600 (X9SCM-iiF)
 ## Event/Reading Type Code = 70h (OEM)
 ## Sensor Type = C0h (OEM)
 ## EventData1 0x02 = "Overheat"
 ##
 ## Note: Early Supermicro motherboards used the "Peppercon" Manufacturer ID
 #
-# IPMI_OEM_Value 10876:1572+1576+1574+1603,10437:4,47488:43707+1549+6+1541+1572+1551+1037+1585+43025,5593:6 0x70 0xC0 0x02 ANY ANY Critical
+# IPMI_OEM_Value 10876:1572+1576+1574+1603+1600,10437:4,47488:43707+1549+6+1541+1572+1551+1037+1585+43025,5593:6 0x70 0xC0 0x02 ANY ANY Critical
 ##########################################################################################################
